# NeuroSearch-Audit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cleanup_generated_artifacts.py  create_branding_bundle.py  docker-compose.yml  go.mod  keis.md  neurosearch-audit-tool.md  package-lock.json  pyproject.toml  run_audit.py  setup_local.sh  setup_windows.ps1
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: config.py  main.py  runtime_settings.py
branding/: README.md
cmd/: README.md
config/: legacy_scoring_weights.yml
configs/: README.md
evals/: acceptance.md  delivery-friction-template.md
internal/: README.md
phase-forge-playbook/: 01-principles.md  02-agent-policy.md  03-project-setup.md  04-requirements.md  05-roadmap.md  06-phase-workflow.md  07-planning.md  08-execution.md  09-verification.md  10-debugging.md  11-session-management.md  12-prompt-recipes.md  13-definition-of-done.md  README.md  telegram-post.md
prompts/: README.md
python/: README.md
reportgen/: __init__.py  builder.py
schemas/: README.md  ai_readiness_scores.schema.json  audit.schema.json  batch_run_manifest.schema.json  batch_run_report.schema.json  benchmark_case.schema.json  client_report.schema.json  client_report_input.schema.json  commercial_offer.schema.json  contradictions.schema.json  coverage_report.schema.json  delivery_friction_report.schema.json  entities.schema.json  expert_report.schema.json  export_backlog.schema.json  (+17 more)
(+299 files in other folders)
